--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <style type="text/css">
-            html, body {
-                padding: 0;
-                margin: 0;
+        <style>
+            input, textarea {
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+                background-color:
+                transparent;
+                border: 0.1rem solid
+                #d1d1d1;
+                border-radius: .4rem;
+                box-shadow: none;
+                box-sizing: inherit;
+                height: 3.8rem;
+                padding: .6rem 1.0rem;
+                width: 100%;
             }
         </style>
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css">
     </head>
     <body>
         <div id="exercise-tracker"></div>
